--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body class="text-[15px] leading-[25px] tracking-[.1px] text-neutral-900 bg-neutral-100">
-<div class="flex flex-col px-8 pt-[85px] pb-[78px] gap-[76px] items-center justify-center min-h-screen">
-    <header class="flex flex-col text-center gap-4 tracking-[.17px] max-w-[540px]">
-        <div class="flex flex-col gap-px text-2xl">
+<div class="flex flex-col px-8 pt-[85px] pb-[78px] lg:py-[80px] gap-[76px] lg:gap-[60px] items-center justify-center min-h-screen">
+    <header class="flex flex-col text-center gap-4 tracking-[.17px] lg:tracking-[.25px] max-w-[540px]">
+        <div class="flex flex-col gap-px text-2xl lg:gap-[-3px] lg:text-4xl">
             <h2 class="font-light">Reliable, efficient delivery</h2>
             <h1 class="font-semibold">Powered by Technology</h1>
         </div>
@@ -22,43 +22,43 @@
         </p>
     </header>
 
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-[25px]">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-[25px] lg:gap-[30px]">
 
         <div class="flex justify-center items-center">
-            <div class="bg-white rounded-lg border-t-4 border-cyan p-7 shadow-card max-w-[300px]">
-                <h3 class="font-semibold text-[20px] mb-px">Supervisor</h3>
-                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px]">
+            <div class="bg-white rounded-lg border-t-4 border-cyan p-7 lg:p-8 shadow-card max-w-[350px]">
+                <h3 class="font-semibold text-[20px] mb-px lg:mb-1.5">Supervisor</h3>
+                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px] lg:mb-10">
                     Monitors activity to identify project roadblocks
                 </p>
-                <img src="./images/icon-supervisor.svg" alt="Supervisor icon" class="w-[57px] h-[57px] ml-auto">
+                <img src="./images/icon-supervisor.svg" alt="Supervisor icon" class="w-[57px] lg:w-16 ml-auto">
             </div>
         </div>
 
-        <div class="flex flex-col items-center space-y-[25px]">
-            <div class="bg-white rounded-lg border-t-4 border-red p-7 shadow-card max-w-[300px]">
-                <h3 class="font-semibold text-[20px] mb-px">Team Builder</h3>
-                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px]">
+        <div class="flex flex-col items-center space-y-[25px] lg:space-y-[30px]">
+            <div class="bg-white rounded-lg border-t-4 border-red p-7 lg:p-8 shadow-card max-w-[350px]">
+                <h3 class="font-semibold text-[20px] mb-px lg:mb-1.5">Team Builder</h3>
+                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px] lg:mb-10">
                     Scans our talent network to create the optimal team for your project
                 </p>
-                <img src="./images/icon-team-builder.svg" alt="Team Builder icon" class="w-[57px] h-[57px] ml-auto">
+                <img src="./images/icon-team-builder.svg" alt="Team Builder icon" class="w-[57px] lg:w-16 ml-auto">
             </div>
 
-            <div class="bg-white rounded-lg border-t-4 border-orange p-7 shadow-card max-w-[300px]">
-                <h3 class="font-semibold text-[20px] mb-px">Karma</h3>
-                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px]">
+            <div class="bg-white rounded-lg border-t-4 border-orange p-7 lg:p-8 shadow-card max-w-[350px]">
+                <h3 class="font-semibold text-[20px] mb-px lg:mb-1.5">Karma</h3>
+                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px] lg:mb-10">
                     Regularly evaluates our talent to ensure quality
                 </p>
-                <img src="./images/icon-karma.svg" alt="Karma icon" class="w-[57px] h-[57px] ml-auto">
+                <img src="./images/icon-karma.svg" alt="Karma icon" class="w-[57px] lg:w-16 ml-auto">
             </div>
         </div>
 
         <div class="flex justify-center items-center">
-            <div class="bg-white rounded-lg border-t-4 border-blue p-7 shadow-card max-w-[300px]">
-                <h3 class="font-semibold text-[20px] mb-px">Calculator</h3>
-                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px]">
+            <div class="bg-white rounded-lg border-t-4 border-blue p-7 lg:p-8 shadow-card max-w-[350px]">
+                <h3 class="font-semibold text-[20px] mb-px lg:mb-1.5">Calculator</h3>
+                <p class="text-[13px] leading-[23px] tracking-[.09px] opacity-50 mb-[33px] lg:mb-10">
                     Uses data from past projects to provide better delivery estimates
                 </p>
-                <img src="./images/icon-calculator.svg" alt="Calculator icon" class="w-[57px] h-[57px] ml-auto">
+                <img src="./images/icon-calculator.svg" alt="Calculator icon" class="w-[57px] lg:w-16 ml-auto">
             </div>
         </div>
     </div>
